--- a/Editor/Rails.Editor.asmdef
+++ b/Editor/Rails.Editor.asmdef
@@ -4,7 +4,8 @@
     "references": [
         "GUID:e8009bcb751a2004cab372059d6185d7",
         "GUID:7b9af3dc99b53c64984d2106329aa0be",
-        "GUID:d8b63aba1907145bea998dd612889d6b"
+        "GUID:d8b63aba1907145bea998dd612889d6b",
+        "GUID:478a2357cc57436488a56e564b08d223"
     ],
     "includePlatforms": [
         "Editor"
